-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 8u51, 9
-
Component/s: javafx
-
Environment:
Windows 10
JDK 8u73 (64-bit)
FX 8u-dev
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8156690 | 8u112 | Alexander Matveev | P2 | Resolved | Fixed | |
| JDK-8157047 | 8u102 | Alexander Matveev | P2 | Closed | Fixed | b08 |
| JDK-8159115 | 8u92 | Alexander Matveev | P2 | Resolved | Fixed | b33 |
We are occasionally seeing intermittent hangs (possibly due to deadlock) in the native GSTMedia.gstDispose method, which causes the JavaFX application to hang. The test case is an application that loads and then disposes various web pages using WebView, some of which have media.
- backported by
-
JDK-8156690 Intermittent hang in GSTMedia.gstDispose
-
- Resolved
-
-
JDK-8159115 Intermittent hang in GSTMedia.gstDispose
-
- Resolved
-
-
JDK-8157047 Intermittent hang in GSTMedia.gstDispose
-
- Closed
-
- relates to
-
JDK-8158109 Compilation error in FX media native code with VS 2010
-
- Closed
-
-
JDK-8154375 Deadlock in FLV demux
-
- Closed
-