8153534: Intermittent hang in GSTMedia.gstDispose

Reviewed-by: kcr, ddehaven